build ssff
